[package]
name = "volley-scout-pro"
version = "0.1.0"
description = "Professional volleyball scouting and match analysis"
authors = ["BlackFoxMedia"]
edition = "2021"

[lib]
name = "volley_scout_pro_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "macros", "migrate"] }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors"] }
tokio-util = { version = "0.7", features = ["io"] }
tokio-tungstenite = { version = "0.26" }
futures-util = "0.3"
ulid = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rfd = "0.15"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
rand = "0.8"

[features]
default = ["custom-protocol"]
custom-protocol = []

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
